# libmp4v2

./: CHANGES.logging  GNUmakefile.am  README.md  configure.ac
branch/win32/: GNUmakefile.auto.am  GNUmakefile.auto.in  configure
branch/win32/libplatform/: platform.h  platform_posix.h
branch/win32/maintainer/: LIBPLATFORM.txt
branch/win32/src/: mp4util.cpp  mp4util.h
branch/win32/util/: mp4dump.cpp  mp4extract.cpp  mp4trackdump.cpp
branches/logging/: CHANGES.logging  GNUmakefile.am
branches/logging/libplatform/: platform_win32.h
branches/logging/libutil/: Utility.cpp
branches/logging/src/: atom_amr.cpp  atom_avc1.cpp  atom_d263.cpp  atom_dac3.cpp  atom_elst.cpp  atom_encv.cpp  atom_ftab.cpp  atom_ftyp.cpp  atom_hdlr.cpp  atom_mdhd.cpp  atom_meta.cpp  atom_pasp.cpp  atom_rtp.cpp  atom_sdp.cpp  atom_smi.cpp  atom_standard.cpp  atom_stsd.cpp  atom_stsz.cpp  atom_text.cpp  atom_tkhd.cpp  atom_trun.cpp  atom_tx3g.cpp  atom_uuid.cpp  atom_video.cpp  atoms.h  cmeta.cpp  descriptors.cpp  exception.cpp  isma.cpp  log.cpp  log.h  mp4.cpp  mp4atom.cpp  mp4atom.h  mp4container.cpp  mp4descriptor.cpp  mp4descriptor.h  mp4file.cpp  mp4file.h  mp4file_io.cpp  (+10 more)
branches/logging/util/: mp4extract.cpp
branches/win32/: GNUmakefile.auto.am  GNUmakefile.in  configure.ac
branches/win32/include/mp4v2/: mp4v2.h
branches/win32/libplatform/io/: File.cpp  FileSystem.h
branches/win32/libplatform/prog/: option.cpp
branches/win32/libplatform/time/: time.h
branches/win32/maintainer/: HOWTO-ADD_SOURCE.txt  HOWTO-BUILD.txt  HOWTO-RELEASE.txt
branches/win32/project/: README.texi
branches/win32/src/: mp4util.cpp
branches/win32/util/: mp4art.cpp  mp4info.cpp  mp4syncfiles.cpp  mp4tags.cpp
branches/win32/vstudio9.0/include/mp4v2/: project.h
doc/: GNUmakefile.mk
doc/1.9.0/: Authors.html  BuildRepository.html  BuildSource.html  ReleaseNotes.html  ToolGuide.html  index.html
doc/1.9.0/api/: _color_parameter_box_8h-source.html  _cover_art_box_8h-source.html  _file_system_8h-source.html  _picture_aspect_ratio_box_8h-source.html  _tags_8h-source.html  annotated.html  chapter_8h-source.html  classes.html  classmp4v2_1_1impl_1_1itmf_1_1_cover_art_box-members.html  classmp4v2_1_1impl_1_1itmf_1_1_cover_art_box.html  classmp4v2_1_1impl_1_1itmf_1_1_cover_art_box_1_1_item-members.html  classmp4v2_1_1impl_1_1itmf_1_1_cover_art_box_1_1_item.html  classmp4v2_1_1impl_1_1qtff_1_1_color_parameter_box-members.html  classmp4v2_1_1impl_1_1qtff_1_1_color_parameter_box.html  classmp4v2_1_1impl_1_1qtff_1_1_color_parameter_box_1_1_item-members.html  classmp4v2_1_1impl_1_1qtff_1_1_color_parameter_box_1_1_item.html  classmp4v2_1_1impl_1_1qtff_1_1_picture_aspect_ratio_box-members.html  classmp4v2_1_1impl_1_1qtff_1_1_picture_aspect_ratio_box.html  classmp4v2_1_1impl_1_1qtff_1_1_picture_aspect_ratio_box_1_1_item-members.html  classmp4v2_1_1impl_1_1qtff_1_1_picture_aspect_ratio_box_1_1_item.html  classmp4v2_1_1platform_1_1io_1_1_file-members.html  classmp4v2_1_1platform_1_1io_1_1_file.html  classmp4v2_1_1platform_1_1io_1_1_file_system-members.html  classmp4v2_1_1platform_1_1io_1_1_file_system.html  coding_8h-source.html  deprecated.html  endian_8h-source.html  error_8h-source.html  example_2itmf_2generic_8c-example.html  example_2itmf_2tags_8c-example.html  example_2provider_2provider_8c-example.html  examples.html  file__prop_8h-source.html  files.html  functions.html  functions_enum.html  functions_eval.html  functions_func.html  functions_type.html  functions_vars.html  (+82 more)
doc/1.9.0/articles/: Authors.html  BuildRepository.html  BuildSource.html  Documentation.html  ReleaseNotes.html  ToolGuide.html
doc/2.0.0/: Authors.html  BuildRepository.html  BuildSource.html  ReleaseNotes.html  ToolGuide.html  index.html
doc/2.0.0/api/: _color_parameter_box_8h_source.html  _cover_art_box_8h_source.html  _file_8h_source.html  _file_system_8h_source.html  _picture_aspect_ratio_box_8h_source.html  _tags_8h_source.html  annotated.html  chapter_8h_source.html  classes.html  classmp4v2_1_1impl_1_1itmf_1_1_cover_art_box-members.html  classmp4v2_1_1impl_1_1itmf_1_1_cover_art_box.html  classmp4v2_1_1impl_1_1itmf_1_1_cover_art_box_1_1_item-members.html  classmp4v2_1_1impl_1_1itmf_1_1_cover_art_box_1_1_item.html  classmp4v2_1_1impl_1_1itmf_1_1_tags-members.html  classmp4v2_1_1impl_1_1itmf_1_1_tags.html  classmp4v2_1_1impl_1_1qtff_1_1_color_parameter_box-members.html  classmp4v2_1_1impl_1_1qtff_1_1_color_parameter_box.html  classmp4v2_1_1impl_1_1qtff_1_1_color_parameter_box_1_1_indexed_item-members.html  classmp4v2_1_1impl_1_1qtff_1_1_color_parameter_box_1_1_indexed_item.html  classmp4v2_1_1impl_1_1qtff_1_1_color_parameter_box_1_1_item-members.html  classmp4v2_1_1impl_1_1qtff_1_1_color_parameter_box_1_1_item.html  classmp4v2_1_1platform_1_1io_1_1_custom_file_provider.html  (+113 more)
doc/test/: index.html
doc/texi/: Documentation.texi  ReleaseNotes.texi
doc/trunk/: Authors.html  BuildRepository.html  BuildSource.html  ReleaseNotes.html  ToolGuide.html  index.html
include/mp4v2/: file.h  general.h  itmf_tags.h
libplatform/: platform_win32.cpp
libplatform/io/: File_win32.cpp
libutil/: TrackModifier.cpp  Utility.cpp
releases/1.9.0/: GNUmakefile.am
releases/1.9.1/: configure.ac
src/: atom_ac3.cpp  atom_avcC.cpp  atom_chpl.cpp  atom_colr.cpp  atom_dac3.cpp  atom_damr.cpp  atom_dref.cpp  atom_enca.cpp  atom_gmin.cpp  atom_hdlr.cpp  atom_href.cpp  atom_mp4s.cpp  atom_mp4v.cpp  atom_mvhd.cpp  atom_ohdr.cpp  atom_rtp.cpp  atom_s263.cpp  atom_sdtp.cpp  atom_sound.cpp  atom_stdp.cpp  atom_stsc.cpp  atom_stsd.cpp  atom_stz2.cpp  atom_text.cpp  atom_tfhd.cpp  atom_treftype.cpp  atom_url.cpp  atom_urn.cpp  atom_vmhd.cpp  cmeta.cpp  descriptors.cpp  descriptors.h  exception.h  isma.cpp  log.cpp  mp4.cpp  mp4atom.cpp  mp4atom.h  mp4container.cpp  mp4container.h  (+19 more)
src/itmf/: Tags.cpp
src/qtff/: PictureAspectRatioBox.cpp
util/: mp4chaps.cpp  mp4file.cpp
vstudio9.0/libmp4v2/: libmp4v2.vcproj
wiki/: BuildDistribution.wiki  BuildRepository.wiki  BuildSource.wiki  DeveloperNotes.wiki  FrontPage.wiki  ToolGuide.wiki  iTunesMetadata.wiki
(+258 files in other folders)
